--- a/Lights.QuickMVC/Lights.QuickMVC.Web/Areas/Admin/Views/Shared/_MainHomeLTE.cshtml
+++ b/Lights.QuickMVC/Lights.QuickMVC.Web/Areas/Admin/Views/Shared/_MainHomeLTE.cshtml
@@ -17,7 +17,7 @@
     <!-- AdminLTE Skins. We have chosen the skin-blue for this starter
       page. However, you can choose any other skin. Make sure you
       apply the skin class to the body tag so the changes take effect. -->
-    <link rel="stylesheet" href="~/Content/AdminLTE/dist/css/skins/skin-blue.min.css">
+    @Styles.Render("~/bundles/CSS/Skin");
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -49,8 +49,8 @@ desired effect
 |               | sidebar-mini                            |
 |---------------------------------------------------------|
 -->
-<body class="hold-transition skin-blue sidebar-mini">
-   
+<body class="hold-transition skin-red sidebar-mini">
+
     <div class="wrapper">
         <!-- Main Header -->
         <header class="main-header">
@@ -183,10 +183,10 @@ desired effect
                                     <img src="~/Content/AdminLTE/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
                                     <p>
                                         @*Alexander Pierce - Web Developer
-                                        <small>Member since Nov. 2012</small>*@
+                                            <small>Member since Nov. 2012</small>*@
                                     </p>
                                 </li>
-                               
+
                                 <!-- Menu Footer-->
                                 <li class="user-footer">
                                     <div class="pull-left">
@@ -198,7 +198,7 @@ desired effect
                                 </li>
                             </ul>
                         </li>
-                        
+
                     </ul>
                 </div>
             </nav>
@@ -352,10 +352,8 @@ desired effect
         immediately after the control sidebar -->
         <div class="control-sidebar-bg"></div>
     </div>
-
     <!-- ./wrapper -->
     <!-- REQUIRED JS SCRIPTS -->
-
     @RenderSection("scripts", required: false)
     <!-- jQuery 3 -->
     <script src="~/Content/AdminLTE/bower_components/jquery/dist/jquery.min.js"></script>
