--- a/Lights.QuickMVC/Lights.QuickMVC.Web/Areas/Admin/Views/Login/Index.cshtml
+++ b/Lights.QuickMVC/Lights.QuickMVC.Web/Areas/Admin/Views/Login/Index.cshtml
@@ -19,91 +19,85 @@
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <meta content="" name="description" />
     <meta content="" name="author" />
-    <!-- BEGIN GLOBAL MANDATORY STYLES -->
-    <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700&subset=all" rel="stylesheet" type="text/css" />
-    
-    <link href="~/Content/metronic_v4.5.2/theme/assets/global/plugins/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
-    <link href="~/Content/metronic_v4.5.2/theme/assets/global/plugins/simple-line-icons/simple-line-icons.min.css" rel="stylesheet" type="text/css" />
-    <link href="~/Content/metronic_v4.5.2/theme/assets/global/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-    <link href="~/Content/metronic_v4.5.2/theme/assets/global/plugins/uniform/css/uniform.default.css" rel="stylesheet" type="text/css" />
-    <link href="~/Content/metronic_v4.5.2/theme/assets/global/plugins/bootstrap-switch/css/bootstrap-switch.min.css" rel="stylesheet" type="text/css" />
-    <!-- END GLOBAL MANDATORY STYLES -->
-    <!-- BEGIN PAGE LEVEL PLUGINS -->
-    <link href="~/Content/metronic_v4.5.2/theme/assets/global/plugins/select2/css/select2.min.css" rel="stylesheet" type="text/css" />
-    <link href="~/Content/metronic_v4.5.2/theme/assets/global/plugins/select2/css/select2-bootstrap.min.css" rel="stylesheet" type="text/css" />
-    <!-- END PAGE LEVEL PLUGINS -->
-    <!-- BEGIN THEME GLOBAL STYLES -->
-    <link href="~/Content/metronic_v4.5.2/theme/assets/global/css/components.min.css" rel="stylesheet" id="style_components" type="text/css" />
-    <link href="~/Content/metronic_v4.5.2/theme/assets/global/css/plugins.min.css" rel="stylesheet" type="text/css" />
-    <!-- END THEME GLOBAL STYLES -->
-    <!-- BEGIN PAGE LEVEL STYLES -->
-    <link href="~/Content/metronic_v4.5.2/theme/assets/pages/css/login.min.css" rel="stylesheet" type="text/css" />
-    <!-- END PAGE LEVEL STYLES -->
-    <!-- BEGIN THEME LAYOUT STYLES -->
-    <!-- END THEME LAYOUT STYLES -->
-    <link rel="shortcut icon" href="favicon.ico" />
+    <!-- Tell the browser to be responsive to screen width -->
+    <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
+    <!-- Bootstrap 3.3.7 -->
+    <link rel="stylesheet" href="~/Content/AdminLTE/bower_components/bootstrap/dist/css/bootstrap.min.css">
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="~/Content/AdminLTE/bower_components/font-awesome/css/font-awesome.min.css">
+    <!-- Ionicons -->
+    <link rel="stylesheet" href="~/Content/AdminLTE/bower_components/Ionicons/css/ionicons.min.css">
+    <!-- Theme style -->
+    <link rel="stylesheet" href="~/Content/AdminLTE/dist/css/AdminLTE.min.css">
+    <!-- iCheck -->
+    <link rel="stylesheet" href="~/Content/AdminLTE/plugins/iCheck/square/blue.css">
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+    <!-- Google Font -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
 </head>
 <!-- END HEAD -->
-<body class=" login">
-    <div class="menu-toggler sidebar-toggler"></div>
-    <!-- END SIDEBAR TOGGLER BUTTON -->
-    <!-- BEGIN LOGO -->
-    <div class="logo">
-            @*<img src="~/Content/metronic_v4.5.2/theme/assets/pages/img/logo-big.png" alt="" />*@
-            <h2 style="color:white">  @ViewBag.PageTitle</h2>
-    </div>
-    <!-- END LOGO -->
-    <!-- BEGIN LOGIN -->
-    <div class="content">
-        <!-- BEGIN LOGIN FORM -->
-        <form class="login-form" action="" method="post">
-            <h3 class="form-title font-green">登录</h3>
+<body  class="hold-transition login-page" style="height:auto;">
+    <div class="login-box" style="margin:7% auto 0">
+        <div class="login-logo">
+            <a href="../../index2.html"><b>Admin</b>LTE</a>
+        </div>
+        <!-- /.login-logo -->
+        <div class="login-box-body">
+            <p class="login-box-msg">登录进入管理系统</p>
+            <form id="loginform"  method="post">
+                <div class="form-group has-feedback">
+                    <input type="text" class="form-control" placeholder="用户名" name="username" value="@ViewBag.UN">
+                    <span class="glyphicon glyphicon-user form-control-feedback"></span>
+                </div>
+                <div class="form-group has-feedback">
+                    <input type="password" class="form-control" placeholder="密码" name="password" value="@ViewBag.PW">
+                    <span class="glyphicon glyphicon-lock form-control-feedback"></span>
+                </div>
+                <div class="form-group has-error">
+                    <span id="spanerror" style="display:none;" class="help-block"></span>
+                </div>
+                <div class="row">
+                    <div class="col-xs-8">
+                        <div class="checkbox icheck">
+                            <label>
+                                <input name="rememberMe" @(ViewBag.RM!=null?(ViewBag.RM?"checked=\"checked\"":""):"") type="checkbox"> 记住密码
+                            </label>
+                        </div>
+                    </div>
+                    <!-- /.col -->
+                    <div class="col-xs-4">
+                        <button type="button" id="btnsubmit" class="btn btn-primary btn-block btn-flat">登 录</button>
+                    </div>
+                    <!-- /.col -->
+                </div>
+            </form>
+            
           
-            <div class="form-group">
-                <!--ie8, ie9 does not support html5 placeholder, so we just show field title for that-->
-                <label class="control-label visible-ie8 visible-ie9">Username</label>
-                <input class="form-control form-control-solid placeholder-no-fix" type="text" autocomplete="off" placeholder="用户名" name="username" />
-            </div>
-            <div class="form-group">
-                <label class="control-label visible-ie8 visible-ie9">Password</label>
-                <input class="form-control form-control-solid placeholder-no-fix" type="password" autocomplete="off" placeholder="密码" name="password" />
-            </div>
-            <div class="alert alert-danger display-hide">
-                <button class="close" data-close="alert"></button>
-                <span> 请输入用户名和密码。 </span>
-            </div>
-            <div class="form-actions">
-                <button type="submit" class="btn green uppercase">登录</button>
-                <label class="rememberme check">
-                    <input type="checkbox" name="remember" value="1" />记住密码
-                </label>
-               
-            </div>
-        </form>
-        <!-- END LOGIN FORM -->
-      
-      
+        </div>
+        <!-- /.login-box-body -->
     </div>
-    <div class="copyright">   </div>
-    <!--[if lt IE 9]>
-    <script src="~/Content/metronic_v4.5.2/theme/assets/global/plugins/respond.min.js"></script>
-    <script src="~/Content/metronic_v4.5.2/theme/assets/global/plugins/excanvas.min.js"></script>
-    <![endif]-->
-    <!-- BEGIN CORE PLUGINS -->
-    @Scripts.Render("~/bundles/CorePlugins")
-    <!-- END CORE PLUGINS -->
-    <!-- BEGIN PAGE LEVEL PLUGINS -->
-    <script src="~/Content/metronic_v4.5.2/theme/assets/global/plugins/jquery-validation/js/jquery.validate.min.js" type="text/javascript"></script>
-    <script src="~/Content/metronic_v4.5.2/theme/assets/global/plugins/jquery-validation/js/additional-methods.min.js" type="text/javascript"></script>
-    <script src="~/Content/metronic_v4.5.2/theme/assets/global/plugins/select2/js/select2.full.min.js" type="text/javascript"></script>
-    <!-- END PAGE LEVEL PLUGINS -->
-    <!-- BEGIN THEME GLOBAL SCRIPTS -->
-    <script src="~/Content/metronic_v4.5.2/theme/assets/global/scripts/app.min.js" type="text/javascript"></script>
-    <!-- END THEME GLOBAL SCRIPTS -->
-    <!-- BEGIN PAGE LEVEL SCRIPTS -->
+    <!-- /.login-box -->
+    <!-- jQuery 3 -->
+    <script src="~/Content/AdminLTE/bower_components/jquery/dist/jquery.min.js"></script>
+    <!-- Bootstrap 3.3.7 -->
+    <script src="~/Content/AdminLTE/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+    <!-- iCheck -->
+    <script src="~/Content/AdminLTE/plugins/iCheck/icheck.min.js"></script>
+
     <script src="~/Scripts/AdminPage/login.js"></script>
-    <!-- END PAGE LEVEL SCRIPTS -->
-    <!-- BEGIN THEME LAYOUT SCRIPTS -->
-    <!-- END THEME LAYOUT SCRIPTS -->
+    <script>
+  $(function () {
+    $('input').iCheck({
+      checkboxClass: 'icheckbox_square-blue',
+      radioClass: 'iradio_square-blue',
+      increaseArea: '20%' // optional
+    });
+  });
+    </script>
 </body>
 </html>
