--- a/Lights.QuickMVC/Lights.QuickMVC.Web/Areas/Admin/Views/Shared/_MainHomeLTE.cshtml
+++ b/Lights.QuickMVC/Lights.QuickMVC.Web/Areas/Admin/Views/Shared/_MainHomeLTE.cshtml
@@ -1,4 +1,10 @@
-﻿<!DOCTYPE html>
+﻿
+@{ 
+    Lights.Admin.Model.Tb_Admin_UserInfo UserInfo = (Lights.Admin.Model.Tb_Admin_UserInfo)Session["UserInfo"];
+    List<Lights.Admin.Model.V_Admin_UserPower> PowerList= (List<Lights.Admin.Model.V_Admin_UserPower>)Session["UserPower"];
+}
+
+<!DOCTYPE html>
 <html>
 <head>
     <title>@ViewBag.Title</title>
@@ -213,7 +219,7 @@ desired effect
                         <img src="~/Content/AdminLTE/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
                     </div>
                     <div class="pull-left info">
-                        <p>管理员</p>
+                        <p>@UserInfo.UserName</p>
                         <!-- Status -->
                         <a href="javascript:;"><i class="fa fa-circle text-success"></i> 在线</a>
                     </div>
