--- a/Lights.QuickMVC/Lights.QuickMVC.Web/Areas/Admin/Views/Login/Index.cshtml
+++ b/Lights.QuickMVC/Lights.QuickMVC.Web/Areas/Admin/Views/Login/Index.cshtml
@@ -65,13 +65,13 @@
                     <div class="col-xs-8">
                         <div class="checkbox icheck">
                             <label>
-                                <input name="rememberMe" @(ViewBag.RM!=null?(ViewBag.RM?"checked=\"checked\"":""):"") type="checkbox"> 记住密码
+                                <input name="rememberMe" @(ViewBag.RM!=null?(ViewBag.RM?"checked=\"checked\"":""):"") type="checkbox" > 记住密码
                             </label>
                         </div>
                     </div>
                     <!-- /.col -->
                     <div class="col-xs-4">
-                        <button type="button" id="btnsubmit" class="btn btn-primary btn-block btn-flat">登 录</button>
+                        <button type="button" id="btnsubmit" class="btn btn-primary btn-block btn-flat" returl="@ViewBag.ReturnUrl">登 录</button>
                     </div>
                     <!-- /.col -->
                 </div>
@@ -91,13 +91,13 @@
 
     <script src="~/Scripts/AdminPage/login.js"></script>
     <script>
-  $(function () {
-    $('input').iCheck({
-      checkboxClass: 'icheckbox_square-blue',
-      radioClass: 'iradio_square-blue',
-      increaseArea: '20%' // optional
-    });
-  });
+          $(function () {
+            $('input').iCheck({
+              checkboxClass: 'icheckbox_square-blue',
+              radioClass: 'iradio_square-blue',
+              increaseArea: '20%' // optional
+            });
+          });
     </script>
 </body>
 </html>
