提交用户管理

--- a/Lights.QuickMVC/Lights.QuickMVC.Web2/Areas/Admin/Views/Home/Index.cshtml
+++ b/Lights.QuickMVC/Lights.QuickMVC.Web2/Areas/Admin/Views/Home/Index.cshtml
@@ -368,7 +368,7 @@ desired effect
             menus[0].isOpen = true;
             addTabs(({ id: firstmenu.id, title: firstmenu.text, close: false, url: firstmenu.url }));
         }
-        $('.sidebar-menu').sidebarMenu({ data: menus, param: { strUser: 'admin' } });
+        $('.sidebar-menu').sidebarMenu({ data: menus });
 
 
     });
