--- a/Lights.QuickMVC/Lights.QuickMVC.Web2/Areas/Admin/Views/Shared/_MainHomeSuperUI.cshtml
+++ b/Lights.QuickMVC/Lights.QuickMVC.Web2/Areas/Admin/Views/Shared/_MainHomeSuperUI.cshtml
@@ -15,13 +15,13 @@
     <!-- Tell the browser to be responsive to screen width -->
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
     <!-- Bootstrap 3.3.6 -->
-    <link rel="stylesheet" href="../content/ui/global/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/Content/superui/content/ui/global/bootstrap/css/bootstrap.min.css">
     <!-- Font Awesome -->
-    <link href="../content/ui/global/font-awesome/css/font-awesome.css" rel="stylesheet" />
+    <link href="/Content/superui/content/ui/global/font-awesome/css/font-awesome.css" rel="stylesheet" />
     <!-- Theme style -->
-    <link rel="stylesheet" href="../content/adminlte/dist/css/AdminLTE.css">
-    <link rel="stylesheet" href="../content/adminlte/dist/css/skins/_all-skins.css">
-    <link href="../content/min/css/supershopui.common.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="/Content/superui/content/adminlte/dist/css/AdminLTE.css">
+    <link rel="stylesheet" href="/Content/superui/content/adminlte/dist/css/skins/_all-skins.css">
+    <link href="/Content/superui/content/min/css/supershopui.common.min.css" rel="stylesheet" />
     @RenderSection("Style", required: false)
     <style type="text/css">
         html {
@@ -63,10 +63,10 @@ desired effect
     <!-- ./wrapper -->
     <!-- REQUIRED JS SCRIPTS -->
     <!-- jQuery 2.2.3 -->
-    <script src="../content/ui/global/jQuery/jquery.min.js"></script>
+    <script src="/Content/superui/content/ui/global/jQuery/jquery.min.js"></script>
     <!-- Bootstrap 3.3.6 -->
-    <script src="../content/ui/global/bootstrap/js/bootstrap.min.js"></script>
-    <script src="../content/min/js/supershopui.common.js"></script>
-    @RenderSection("scripts", required: false)
+    <script src="/Content/superui/content/ui/global/bootstrap/js/bootstrap.min.js"></script>
+    <script src="/Content/superui/content/min/js/supershopui.common.js"></script>
+    @RenderSection("Scripts", required: false)
 </body>
 </html>
