--- a/Lights.QuickMVC/Lights.QuickMVC.Web2/Areas/Admin/Views/User/Index.cshtml
+++ b/Lights.QuickMVC/Lights.QuickMVC.Web2/Areas/Admin/Views/User/Index.cshtml
@@ -1,8 +1,71 @@
 ﻿
 @{
     ViewBag.Title = "Index";
-    Layout = "~/Areas/Admin/Views/Shared/_MainHomeSuperUI.cshtml";
+    Layout = "~/Areas/Admin/Views/Shared/_MainAdminTable.cshtml";
 }
 
-<h2>UserIndex</h2>
+<table class="table-striped table-hover" id="table"></table>
 
+
+@section Style{
+}
+
+@section searchBox{
+    <form id="formSearch" class="form-horizontal">
+        <div class="form-group" style="margin-top:15px">
+            <label class="control-label col-sm-1" for="txt_search_departmentname">姓</label>
+            <div class="col-sm-3">
+                <input type="text" class="form-control" id="txt_search_departmentname">
+            </div>
+            <label class="control-label col-sm-1" for="txt_search_statu">用户名</label>
+            <div class="col-sm-3">
+                <input type="text" class="form-control" id="txt_search_statu">
+            </div>
+            <div class="col-sm-4" style="text-align:left;">
+                <button type="button" style="margin-left:50px" id="btn_query" class="btn btn-primary">查询</button>
+            </div>
+        </div>
+    </form>
+}
+
+@section toolbarBox{
+    <button id="btn_add" type="button" class="btn btn-default">
+        <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>新增
+    </button>
+    <button id="btn_edit" type="button" class="btn btn-default">
+        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>修改
+    </button>
+    <button id="btn_delete" type="button" class="btn btn-default">
+        <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>删除
+    </button>
+}
+@section Scripts{
+    <script>
+        $(function () {
+
+            $('#table').bootstrapTable({
+                url: '/Admin/User/GetUserList',                           //请求后台的URL（*）
+                method: 'post',                     //请求方式（*）
+                toolbar: '#toolbar',                   //工具按钮用哪个容器
+                striped: true,                      //是否显示行间隔色
+                pagination: true,                   //是否显示分页（*）
+                sidePagination: "server",           //分页方式：client客户端分页，server服务端分页（*）
+                pageSize: 10,                       //每页的记录行数（*）
+                pageList: [10, 20, 30],            //可供选择的每页的行数（*）
+                columns: [{
+                    field: 'UserID',
+                    title: '用户编号'
+                }, {
+                    field: 'UserName',
+                    title: '用户名称'
+                }, {
+                    field: 'TrueName',
+                    title: '真实姓名'
+                }, {
+                    field: 'AvatarImg',
+                    title: '头像'
+                }]
+            });
+        })
+    </script>
+}
