--- a/Lights.QuickMVC/Lights.QuickMVC.Web2/Areas/Admin/Views/Home/Index.cshtml
+++ b/Lights.QuickMVC/Lights.QuickMVC.Web2/Areas/Admin/Views/Home/Index.cshtml
@@ -3,9 +3,7 @@
     List<Lights.QuickMVC.AdminModel.AdminMenu> MenuList = (List<Lights.QuickMVC.AdminModel.AdminMenu>)Session["UserMenu"];
     string MenuStr = Json.Encode(MenuList);
 }
-
 <!DOCTYPE html>
-
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
@@ -33,31 +31,8 @@
     <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-
 </head>
-<!--
-BODY TAG OPTIONS:
-=================
-Apply one or more of the following classes to get the
-desired effect
-|---------------------------------------------------------|
-| SKINS         | skin-blue                               |
-|               | skin-black                              |
-|               | skin-purple                             |
-|               | skin-yellow                             |
-|               | skin-red                                |
-|               | skin-green                              |
-|---------------------------------------------------------|
-|LAYOUT OPTIONS | fixed                                   |
-|               | layout-boxed                            |
-|               | layout-top-nav                          |
-|               | sidebar-collapse                        |
-|               | sidebar-mini                            |
-|---------------------------------------------------------|
--->
-
 <body class="hold-transition skin-blue sidebar-mini fixed">
-
     <div class="wrapper">
         <!-- Main Header -->
         <header class="main-header">
@@ -68,132 +43,16 @@ desired effect
                 <!-- logo for regular state and mobile devices -->
                 <span class="logo-lg"><b>Super</b>Shop</span>
             </a>
-
             <!-- Header Navbar -->
             <nav class="navbar navbar-static-top" role="navigation">
                 <!-- Sidebar toggle button-->
                 <a href="#" class="sidebar-toggle" data-toggle="offcanvas" role="button">
                     <span class="sr-only">切换导航</span>
                 </a>
-                <div class="collapse navbar-collapse pull-left" id="navbar-collapse">
-                    <ul class="nav navbar-nav">
-                        <li><a href="#">平台 <span class="sr-only">(current)</span></a></li>
-                        <li><a href="#">订单</a></li>
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">会员 <span class="caret"></span></a>
-                            <ul class="dropdown-menu" role="menu">
-                                <li><a href="#">会员积分管理</a></li>
-                                <li><a href="#">会员等级管理</a></li>
-                                <li><a href="#">会员信息管理</a></li>
-                                <li class="divider"></li>
-                                <li><a href="#">会员营销管理</a></li>
-                                <li class="divider"></li>
-                                <li><a href="#">会员优惠券</a></li>
-                            </ul>
-                        </li>
-                    </ul>
 
-                </div>
                 <!-- Navbar Right Menu -->
                 <div class="navbar-custom-menu">
                     <ul class="nav navbar-nav">
-                        <!-- Messages: style can be found in dropdown.less-->
-                        <li class="dropdown messages-menu">
-                            <!-- Menu toggle button -->
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                <i class="fa fa-envelope-o"></i>
-                                <span class="label label-success">4</span>
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li class="header">你有4条提醒</li>
-                                <li>
-                                    <!-- inner menu: contains the messages -->
-                                    <ul class="menu">
-                                        <li>
-                                            <!-- start message -->
-                                            <a href="#">
-                                                <div class="pull-left">
-                                                    <!-- User Image -->
-                                                    <img src="/Content/superui/content/ui/img/photos/girl1.png" class="img-circle" alt="User Image">
-                                                </div>
-                                                <!-- Message title and timestamp -->
-                                                <h4>
-                                                    新用户注册
-                                                    <small><i class="fa fa-clock-o"></i> 现在</small>
-                                                </h4>
-                                                <!-- The message -->
-                                                <p>新用户注册!</p>
-                                            </a>
-                                        </li>
-                                        <!-- end message -->
-                                    </ul>
-                                    <!-- /.menu -->
-                                </li>
-                                <li class="footer"><a href="#">查看所有提醒</a></li>
-                            </ul>
-                        </li>
-                        <!-- /.messages-menu -->
-                        <!-- Notifications Menu -->
-                        <li class="dropdown notifications-menu">
-                            <!-- Menu toggle button -->
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                <i class="fa fa-bell-o"></i>
-                                <span class="label label-warning">10</span>
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li class="header">你有10条消息</li>
-                                <li>
-                                    <!-- Inner Menu: contains the notifications -->
-                                    <ul class="menu">
-                                        <li>
-                                            <!-- start notification -->
-                                            <a href="#">
-                                                <i class="fa fa-users text-aqua"></i> 新用户注册!
-                                            </a>
-                                        </li>
-                                        <!-- end notification -->
-                                    </ul>
-                                </li>
-                                <li class="footer"><a href="#">查看所有</a></li>
-                            </ul>
-                        </li>
-                        <!-- Tasks Menu -->
-                        <li class="dropdown tasks-menu">
-                            <!-- Menu Toggle Button -->
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                <i class="fa fa-flag-o"></i>
-                                <span class="label label-danger">9</span>
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li class="header">您有9条消息</li>
-                                <li>
-                                    <!-- Inner menu: contains the tasks -->
-                                    <ul class="menu">
-                                        <li>
-                                            <!-- Task item -->
-                                            <a href="#">
-                                                <!-- Task title and progress text -->
-                                                <h3>
-                                                    superui第一版发布啦
-                                                    <small class="pull-right">20%</small>
-                                                </h3>
-                                                <!-- The progress bar -->
-                                                <div class="progress xs">
-                                                    <!-- Change the css width attribute to simulate progress -->
-                                                    <div class="progress-bar progress-bar-aqua" style="width: 20%" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
-                                                        <span class="sr-only">20% 完成</span>
-                                                    </div>
-                                                </div>
-                                            </a>
-                                        </li>
-                                        <!-- end task item -->
-                                    </ul>
-                                </li>
-                                <li class="footer">
-                                    <a href="#">查看所有</a>
-                                </li>
-                            </ul>
-                        </li>
                         <!-- User Account Menu -->
                         <li class="dropdown user user-menu">
                             <!-- Menu Toggle Button -->
@@ -208,40 +67,22 @@ desired effect
                                 <li class="user-header">
                                     <img src="@(string.IsNullOrEmpty(UserInfo.AvatarImg)?"/Content/superui/content/ui/img/photos/girl1.png":UserInfo.AvatarImg)" class="img-circle" alt="User Image">
                                     <p>
-                                       欢迎  @UserInfo.TrueName
+                                        欢迎  @UserInfo.TrueName
                                         <small>@UserInfo.CreateDate.Value.ToString("yyyy") 年注册</small>
                                     </p>
-                                </li>
-                                <!-- Menu Body -->
-                                <li class="user-body">
-                                    <div class="row">
-                                        <div class="col-xs-4 text-center">
-                                            <a href="#">个人信息</a>
-                                        </div>
-                                        <div class="col-xs-4 text-center">
-                                            <a href="#">设置</a>
-                                        </div>
-                                        <div class="col-xs-4 text-center">
-                                            <a href="#">主题</a>
-                                        </div>
-                                    </div>
-                                    <!-- /.row -->
                                 </li>
                                 <!-- Menu Footer-->
                                 <li class="user-footer">
                                     <div class="pull-left">
-                                        <a href="#" class="btn btn-default btn-flat">个人中心</a>
+                                        <a href="#" class="btn btn-default btn-flat">修改密码</a>
                                     </div>
+
                                     <div class="pull-right">
                                         <a href="/Admin/Login/Index" class="btn btn-default btn-flat">退出</a>
                                     </div>
                                 </li>
                             </ul>
                         </li>
-                        <!-- Control Sidebar Toggle Button -->
-                        @*<li>
-                            <a href="#" data-toggle="control-sidebar"><i class="fa fa-gears"></i></a>
-                        </li>*@
                     </ul>
                 </div>
             </nav>
@@ -257,8 +98,7 @@ desired effect
                     </div>
                     <div class="pull-left info">
                         <p>@UserInfo.TrueName</p>
-                        <!-- Status -->
-                        @*<a href="#"><i class="fa fa-circle text-success"></i> 在线</a>*@
+
                     </div>
                 </div>
                 <!-- search form (Optional) -->
@@ -287,7 +127,6 @@ desired effect
                 </button>
                 <nav class="page-tabs menuTabs tab-ui-menu" id="tab-menu">
                     <div class="page-tabs-content" style="margin-left: 0px;">
-
                     </div>
                 </nav>
                 <button class="roll-nav roll-right tabRight" onclick="scrollTabRight()">
@@ -308,7 +147,6 @@ desired effect
             </div>
             <div class="content-iframe " style="background-color: #ffffff; ">
                 <div class="tab-content " id="tab-content">
-
                 </div>
             </div>
             <!-- /.content -->
@@ -321,30 +159,8 @@ desired effect
                 SuperShop项目组
             </div>
             <!-- Default to the left -->
-            版权所有 &copy;tzhsweet 2015-2018&nbsp;&nbsp;&nbsp;&nbsp;   粤ICP备16024545号-1
+            版权所有 &copy;2017 Lights.QuickMVC
         </footer>
-        <!-- Control Sidebar -->
-        <aside class="control-sidebar control-sidebar-dark">
-            <!-- Create the tabs -->
-            <ul class="nav nav-tabs nav-justified control-sidebar-tabs">
-                <li><a href="#control-sidebar-home-tab" data-toggle="tab"><i class="fa fa-home"></i></a></li>
-              
-            </ul>
-            <!-- Tab panes -->
-            <div class="tab-content">
-                <!-- Home tab content -->
-                <div class="tab-pane" id="control-sidebar-home-tab">
-                    
-                </div>
-                <!-- /.tab-pane -->
-                
-               
-            </div>
-        </aside>
-        <!-- /.control-sidebar -->
-        <!-- Add the sidebar's background. This div must be placed
-        immediately after the control sidebar -->
-        <div class="control-sidebar-bg"></div>
     </div>
     <!-- ./wrapper -->
     <!-- REQUIRED JS SCRIPTS -->
@@ -354,27 +170,23 @@ desired effect
     <script src="/Content/superui/content/ui/global/bootstrap/js/bootstrap.min.js"></script>
     <script src="/Content/superui/content/min/js/supershopui.common.js"></script>
 
-
     <script type="text/javascript">
-    $(function() {
-       
-        App.fixIframeCotent();
+        $(function () {
 
-        var menustr= "@MenuStr";
-        var reg = new RegExp("&quot;", "g"); //创建正则RegExp对象
-        var menus = JSON.parse(menustr.replace(reg, '"'));
-        if (menus) {
-            var firstmenu = menus[0];
-            menus[0].isOpen = true;
-            addTabs(({ id: firstmenu.id, title: firstmenu.text, close: false, url: firstmenu.url }));
-        }
-        $('.sidebar-menu').sidebarMenu({ data: menus });
+            App.fixIframeCotent();
+
+            var menustr = "@MenuStr";
+            var reg = new RegExp("&quot;", "g"); //创建正则RegExp对象
+            var menus = JSON.parse(menustr.replace(reg, '"'));
+            if (menus) {
+                var firstmenu = menus[0];
+                menus[0].isOpen = true;
+                addTabs(({ id: firstmenu.id, title: firstmenu.text, close: false, url: firstmenu.url }));
+            }
+            $('.sidebar-menu').sidebarMenu({ data: menus });
 
 
-    });
+        });
     </script>
 </body>
 </html>
-
-
-
