--- a/Lights.QuickMVC/Lights.QuickMVC.Web2/Areas/Admin/Views/Menu/Index.cshtml
+++ b/Lights.QuickMVC/Lights.QuickMVC.Web2/Areas/Admin/Views/Menu/Index.cshtml
@@ -1,8 +1,49 @@
 ﻿
 @{
     ViewBag.Title = "Index";
-    Layout = "~/Areas/Admin/Views/Shared/_MainHomeSuperUI.cshtml";
+    Layout = "~/Areas/Admin/Views/Shared/_MainAdminTable.cshtml";
 }
 
-<h2>MenuIndex</h2>
+@section Style{
+}
+@section headerBox{
+    <h3>
+        菜单管理
+    </h3>
+}
+@section searchBox{
+    <div class="row">
+        <div class="col-sm-3">
+            <div class="input-group">
+                <div class="input-group-btn">
+                    <select class="form-control" id="searchType" style="width:auto">
+                        <option value="0">搜索类型</option>
+                        <option value="1">用户名</option>
+                    </select>
+                </div>
+                <input class="form-control" type="text" placeholder="搜索关键字" id="searchkey" />
+            </div>
+        </div>
+        <div class="col-sm-3"><button type="button" id="btn_query" class="btn btn-primary">查询</button></div>
+        <div class="col-sm-3"></div>
+        <div class="col-sm-3"></div>
+    </div>
+}
+@section toolbarBox{
+    <button id="btn_add" type="button" class="btn btn-default">
+        <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>新增
+    </button>
+    <button id="btn_edit" type="button" class="btn btn-default">
+        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>修改
+    </button>
+    <button id="btn_delete" type="button" class="btn btn-default">
+        <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>删除
+    </button>
+}
+<table class="table-striped table-hover table-condensed" id="table">
+
+</table>
+@section Scripts{
+<script src="~/Scripts/AdminPage/MenuIndex.js"></script>
+}
 
