--- a/Lights.QuickMVC/Lights.QuickMVC.Web2/Areas/Admin/Views/User/Index.cshtml
+++ b/Lights.QuickMVC/Lights.QuickMVC.Web2/Areas/Admin/Views/User/Index.cshtml
@@ -3,9 +3,7 @@
     ViewBag.Title = "Index";
     Layout = "~/Areas/Admin/Views/Shared/_MainAdminTable.cshtml";
 }
-
-<table class="table-striped table-hover" id="table"></table>
-
+<table class="table-striped table-hover table-condensed" id="table"></table>
 
 @section Style{
 }
@@ -14,25 +12,24 @@
         用户管理
     </h3>
 }
-
 @section searchBox{
-    <form id="formSearch" class="form-horizontal">
-        <div class="form-group" style="margin-top:15px">
-            <label class="control-label col-sm-1" for="txt_search_departmentname">姓</label>
-            <div class="col-sm-3">
-                <input type="text" class="form-control" id="txt_search_departmentname">
-            </div>
-            <label class="control-label col-sm-1" for="txt_search_statu">用户名</label>
-            <div class="col-sm-3">
-                <input type="text" class="form-control" id="txt_search_statu">
-            </div>
-            <div class="col-sm-4" style="text-align:left;">
-                <button type="button" style="margin-left:50px" id="btn_query" class="btn btn-primary">查询</button>
+    <div class="row">
+        <div class="col-sm-3">
+            <div class="input-group">
+                <div class="input-group-btn">
+                    <select class="form-control" id="searchType" style="width:auto">
+                        <option value="0">搜索类型</option>
+                        <option value="1">用户名</option>
+                    </select>
+                </div>
+                <input class="form-control" type="text" placeholder="搜索关键字" id="searchkey" />
             </div>
         </div>
-    </form>
+        <div class="col-sm-3"><button type="button" id="btn_query" class="btn btn-primary">查询</button></div>
+        <div class="col-sm-3"></div>
+        <div class="col-sm-3"></div>
+    </div>
 }
-
 @section toolbarBox{
     <button id="btn_add" type="button" class="btn btn-default">
         <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>新增
