--- a/Lights.QuickMVC/Lights.QuickMVC.Web/Areas/Admin/Views/User/Index.cshtml
+++ b/Lights.QuickMVC/Lights.QuickMVC.Web/Areas/Admin/Views/User/Index.cshtml
@@ -1,8 +1,9 @@
 ﻿
 @{
-    ViewBag.Title = ViewBag.PageTitle;
+    ViewBag.Title = "Index";
     Layout = "~/Areas/Admin/Views/Shared/_MainHomeLTE.cshtml";
 }
+
 
 @section Style{
 
@@ -10,7 +11,7 @@
 
 
 
-  <section class="content-header">
+<section class="content-header">
     <h1>
         Page Header
         <small>Optional description</small>
@@ -26,8 +27,9 @@
 
 
 @section scripts{
-    
+
 }
+
 
 
 
