--- a/Lights.QuickMVC/Lights.QuickMVC.Web2/Areas/Admin/Views/Menu/Index.cshtml
+++ b/Lights.QuickMVC/Lights.QuickMVC.Web2/Areas/Admin/Views/Menu/Index.cshtml
@@ -46,6 +46,17 @@
     </button>
 }
 <table class="table-striped table-hover table-condensed" id="table"></table>
+
+<div id="addmenu" style="display:none;">
+    <div class="form-group">
+        <input type="text" class="form-control" id="txtmenuname" name="MenuName" placeholder="菜单名称" />
+    </div>
+    <div class="form-group">
+        <input type="text"  class="form-control" id="txtmenuurl" name="MenuUrl" placeholder="菜单地址" />
+    </div>
+</div>
+
+
 @section Scripts{
     <script src="~/Scripts/AdminPage/MenuIndex.js"></script>
 }
