--- a/Lights.QuickMVC/Lights.QuickMVC.Web2/Areas/Admin/Views/Shared/_MainAdminTable.cshtml
+++ b/Lights.QuickMVC/Lights.QuickMVC.Web2/Areas/Admin/Views/Shared/_MainAdminTable.cshtml
@@ -62,6 +62,7 @@
     <script src="/Content/superui/content/min/js/supershopui.common.js"></script>
     <script src="/Content/superui/content/plugins/bootstrap-table/bootstrap-table.js"></script>
     <script src="/Content/superui/content/plugins/bootstrap-table/locale/bootstrap-table-zh-CN.js"></script>
+    <script src="~/Scripts/Plugins/layer/layer/layer.js"></script>
     @RenderSection("Scripts", required: true)
 
 </body>
