--- a/Lights.QuickMVC/Lights.QuickMVC.Web/Areas/Admin/Views/Role/Index.cshtml
+++ b/Lights.QuickMVC/Lights.QuickMVC.Web/Areas/Admin/Views/Role/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = ViewBag.PageTitle;
+    ViewBag.Title = "Index";
     Layout = "~/Areas/Admin/Views/Shared/_MainHomeLTE.cshtml";
 }
 
@@ -10,7 +10,7 @@
 
 
 
-  <section class="content-header">
+<section class="content-header">
     <h1>
         Page Header
         <small>Optional description</small>
@@ -26,9 +26,6 @@
 
 
 @section scripts{
-    
+
 }
-
-
-
 
