--- a/Lights.QuickMVC/Lights.QuickMVC.Web/Areas/Admin/Views/Shared/_MainHomeLTE.cshtml
+++ b/Lights.QuickMVC/Lights.QuickMVC.Web/Areas/Admin/Views/Shared/_MainHomeLTE.cshtml
@@ -3,7 +3,6 @@
     Lights.Admin.Model.Tb_Admin_UserInfo UserInfo = (Lights.Admin.Model.Tb_Admin_UserInfo)Session["UserInfo"];
     List<Lights.QuickMVC.AdminModel.AdminMenu> MenuList = (List<Lights.QuickMVC.AdminModel.AdminMenu>)Session["UserMenu"];
 }
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -20,11 +19,8 @@
     <link rel="stylesheet" href="~/Content/AdminLTE/bower_components/Ionicons/css/ionicons.min.css">
     <!-- Theme style -->
     <link rel="stylesheet" href="~/Content/AdminLTE/dist/css/AdminLTE.min.css">
-    <!-- AdminLTE Skins. We have chosen the skin-blue for this starter
-      page. However, you can choose any other skin. Make sure you
-      apply the skin class to the body tag so the changes take effect. -->
+
     @Styles.Render("~/bundles/CSS/Skin")
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
@@ -35,125 +31,22 @@
           href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
     @RenderSection("Style", required: false)
 </head>
-<body class="hold-transition skin-blue sidebar-mini">
-
+<body class="hold-transition skin-blue sidebar-mini fixed">
     <div class="wrapper">
-        <!-- Main Header -->
+
         <header class="main-header">
-            <!-- Logo -->
+
             <a href="#" class="logo">
-                <!-- mini logo for sidebar mini 50x50 pixels -->
                 <span class="logo-mini"><b>A</b>LT</span>
-                <!-- logo for regular state and mobile devices -->
                 <span class="logo-lg"><b>Admin</b>LTE</span>
             </a>
-            <!-- Header Navbar -->
             <nav class="navbar navbar-static-top" role="navigation">
-                <!-- Sidebar toggle button-->
                 <a href="#" class="sidebar-toggle" data-toggle="push-menu" role="button">
                     <span class="sr-only">Toggle navigation</span>
                 </a>
                 <!-- Navbar Right Menu -->
                 <div class="navbar-custom-menu">
                     <ul class="nav navbar-nav">
-                        <!-- Messages: style can be found in dropdown.less-->
-                        <li class="dropdown messages-menu">
-                            <!-- Menu toggle button -->
-                            <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown">
-                                <i class="fa fa-envelope-o"></i>
-                                <span class="label label-success"></span>
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li class="header">You have 4 messages</li>
-                                <li>
-                                    <!-- inner menu: contains the messages -->
-                                    <ul class="menu">
-                                        <li>
-                                            <!-- start message -->
-                                            <a href="javascript:;">
-                                                <div class="pull-left">
-                                                    <!-- User Image -->
-                                                    <img src="~/Content/AdminLTE/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
-                                                </div>
-                                                <!-- Message title and timestamp -->
-                                                <h4>
-                                                    Support Team
-                                                    <small><i class="fa fa-clock-o"></i> 5 mins</small>
-                                                </h4>
-                                                <!-- The message -->
-                                                <p>Why not buy a new awesome theme?</p>
-                                            </a>
-                                        </li>
-                                        <!-- end message -->
-                                    </ul>
-                                    <!-- /.menu -->
-                                </li>
-                                <li class="footer"><a href="#">See All Messages</a></li>
-                            </ul>
-                        </li>
-                        <!-- /.messages-menu -->
-                        <!-- Notifications Menu -->
-                        <li class="dropdown notifications-menu">
-                            <!-- Menu toggle button -->
-                            <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown">
-                                <i class="fa fa-bell-o"></i>
-                                <span class="label label-warning"></span>
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li class="header">You have 10 notifications</li>
-                                <li>
-                                    <!-- Inner Menu: contains the notifications -->
-                                    <ul class="menu">
-                                        <li>
-                                            <!-- start notification -->
-                                            <a href="javascript:;">
-                                                <i class="fa fa-users text-aqua"></i> 5 new members joined today
-                                            </a>
-                                        </li>
-                                        <!-- end notification -->
-                                    </ul>
-                                </li>
-                                <li class="footer"><a href="#">View all</a></li>
-                            </ul>
-                        </li>
-                        <!-- Tasks Menu -->
-                        <li class="dropdown tasks-menu">
-                            <!-- Menu Toggle Button -->
-                            <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown">
-                                <i class="fa fa-flag-o"></i>
-                                <span class="label label-danger"></span>
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li class="header">You have 9 tasks</li>
-                                <li>
-                                    <!-- Inner menu: contains the tasks -->
-                                    <ul class="menu">
-                                        <li>
-                                            <!-- Task item -->
-                                            <a href="javascript:;">
-                                                <!-- Task title and progress text -->
-                                                <h3>
-                                                    Design some buttons
-                                                    <small class="pull-right">20%</small>
-                                                </h3>
-                                                <!-- The progress bar -->
-                                                <div class="progress xs">
-                                                    <!-- Change the css width attribute to simulate progress -->
-                                                    <div class="progress-bar progress-bar-aqua" style="width: 20%" role="progressbar"
-                                                         aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
-                                                        <span class="sr-only">20% Complete</span>
-                                                    </div>
-                                                </div>
-                                            </a>
-                                        </li>
-                                        <!-- end task item -->
-                                    </ul>
-                                </li>
-                                <li class="footer">
-                                    <a href="javascript:;">View all tasks</a>
-                                </li>
-                            </ul>
-                        </li>
                         <!-- User Account Menu -->
                         <li class="dropdown user user-menu">
                             <!-- Menu Toggle Button -->
@@ -161,18 +54,17 @@
                                 <!-- The user image in the navbar-->
                                 <img src="~/Content/AdminLTE/dist/img/user2-160x160.jpg" class="user-image" alt="User Image">
                                 <!-- hidden-xs hides the username on small devices so only the image appears. -->
-                                <span class="hidden-xs">管理员</span>
+                                <span class="hidden-xs">@UserInfo.TrueName</span>
                             </a>
                             <ul class="dropdown-menu">
                                 <!-- The user image in the menu -->
                                 <li class="user-header">
                                     <img src="~/Content/AdminLTE/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
                                     <p>
-                                        @*Alexander Pierce - Web Developer
-                                            <small>Member since Nov. 2012</small>*@
+                                        @UserInfo.TrueName
+                                        <small>@UserInfo.CreateDate.Value.ToString("yyyy")</small>
                                     </p>
                                 </li>
-
                                 <!-- Menu Footer-->
                                 <li class="user-footer">
                                     <div class="pull-left">
@@ -184,7 +76,6 @@
                                 </li>
                             </ul>
                         </li>
-
                     </ul>
                 </div>
             </nav>
@@ -200,26 +91,26 @@
                     </div>
                     <div class="pull-left info">
                         <p>@UserInfo.UserName</p>
-                        <!-- Status -->
-                        <a href="javascript:;"><i class="fa fa-circle text-success"></i> 在线</a>
                     </div>
                 </div>
-                <!-- search form (Optional) -->
-                <form action="#" method="get" class="sidebar-form">
-                    <div class="input-group">
-                        <input type="text" name="q" class="form-control" placeholder="Search...">
-                        <span class="input-group-btn">
-                            <button type="submit" name="search" id="search-btn" class="btn btn-flat">
-                                <i class="fa fa-search"></i>
-                            </button>
-                        </span>
-                    </div>
-                </form>
-                <!-- /.search form -->
                 <!-- Sidebar Menu -->
                 <ul class="sidebar-menu" data-widget="tree">
-                    <li class="header">HEADER</li>
-                    <!-- Optionally, you can add icons to the links -->
+                    <li class="header">我的控制台</li>
+                    <li><a href="/Admin/Home/Index"><i class="fa fa-link"></i> <span>首页</span></a></li>
+                    <li><a href="/Admin/User/Index"><i class="fa fa-link"></i> <span>用户管理</span></a></li>
+                    <li class="treeview menu-open">
+                        <a href="#">
+                            <i class="fa fa-link"></i> <span>权限管理</span>
+                            <span class="pull-right-container">
+                                <i class="fa fa-angle-left pull-right"></i>
+                            </span>
+                        </a>
+                        <ul class="treeview-menu">
+                            <li class="active"><a href="/Admin/Menu/Index">菜单管理</a></li>
+                            <li><a href="#">Link in level 2</a></li>
+                        </ul>
+                    </li>
+
                     @{
                         if (MenuList.Count != 0)
                         {
@@ -236,39 +127,23 @@
                                             </span>
                                         </a>
                                         <ul class="treeview-menu">
-                                           @foreach (Lights.QuickMVC.AdminModel.AdminMenu m in am.children)
-                                           {
-                                             <li><a href="@m.url">@m.text</a></li>
-                                           }
-                                           
+                                            @foreach (Lights.QuickMVC.AdminModel.AdminMenu m in am.children)
+                                            {
+                                                <li><a href="@m.url">@m.text</a></li>
+                                            }
+
                                         </ul>
                                     </li>
                                 }
                                 else
                                 {
-                                    <li @(i==0?"class=active":"") ><a href="@am.url"><i class="@am.icon"></i> <span>@am.text</span></a></li>
+                                    <li @(i == 0 ? "class=active" : "")><a href="@am.url"><i class="@am.icon"></i> <span>@am.text</span></a></li>
                                 }
                             }
                         }
 
                     }
 
-
-
-                    @*<li class="active"><a href="#"><i class="fa fa-link"></i> <span>Link</span></a></li>
-                    <li><a href="#"><i class="fa fa-link"></i> <span>Another Link</span></a></li>
-                    <li class="treeview">
-                        <a href="#">
-                            <i class="fa fa-link"></i> <span>Multilevel</span>
-                            <span class="pull-right-container">
-                                <i class="fa fa-angle-left pull-right"></i>
-                            </span>
-                        </a>
-                        <ul class="treeview-menu">
-                            <li><a href="#">Link in level 2</a></li>
-                            <li><a href="#">Link in level 2</a></li>
-                        </ul>
-                    </li>*@
                 </ul>
                 <!-- /.sidebar-menu -->
             </section>
@@ -276,22 +151,8 @@
         </aside>
         <!-- Content Wrapper. Contains page content -->
         <div class="content-wrapper">
-            <!-- Content Header (Page header) -->
-            <section class="content-header">
-                <h1>
-                    Page Header
-                    <small>Optional description</small>
-                </h1>
-                <ol class="breadcrumb">
-                    <li><a href="#"><i class="fa fa-dashboard"></i> Level</a></li>
-                    <li class="active">Here</li>
-                </ol>
-            </section>
-            <!-- Main content -->
-            <section class="content container-fluid">
-                @RenderBody()
-            </section>
-            <!-- /.content -->
+            @RenderBody()
+
         </div>
         <!-- /.content-wrapper -->
         <!-- Main Footer -->
@@ -303,12 +164,9 @@
             <!-- Default to the left -->
             <strong>Copyright &copy; 2016 <a href="#">Company</a>.</strong> All rights reserved.
         </footer>
-       
-        
     </div>
     <!-- ./wrapper -->
     <!-- REQUIRED JS SCRIPTS -->
-    @RenderSection("scripts", required: false)
     <!-- jQuery 3 -->
     <script src="~/Content/AdminLTE/bower_components/jquery/dist/jquery.min.js"></script>
     <!-- Bootstrap 3.3.7 -->
@@ -318,5 +176,16 @@
     <!-- Optionally, you can add Slimscroll and FastClick plugins.
          Both of these plugins are recommended to enhance the
          user experience. -->
+
+    @RenderSection("scripts", required: false)
+
+    <script>
+        $(function () {
+            var url = window.location;
+            var element = $('ul.sidebar-menu a').filter(function () {
+                return $(this).attr('href') == url;
+            }).parent().addClass('active');
+        })
+    </script>
 </body>
 </html>
