旧的口语官网

--- a/Lights.QuickMVC/Lights.QuickMVC.Web2/Content/superui/components/layer.html
+++ b/Lights.QuickMVC/Lights.QuickMVC.Web2/Content/superui/components/layer.html
@@ -87,7 +87,7 @@
 <!-- Bootstrap 3.3.6 -->
 
 <script src="../content/ui/global/bootstrap/js/bootstrap.min.js"></script>
-<script src="../content/min/js/supershopui.common.js"></script>
+<!--<script src="../content/min/js/supershopui.common.js"></script>-->
 
 </body>
 <script>
